# c-matrix-determinant

./: CMakeLists.txt  README.md  matrix_rand.py
src/: common.h  main_matrix_determinant.c
src/config/: config.c  config.h
src/matrix/: matrix.c  matrix.h
tests/: matrix_01.txt  matrix_02.txt  matrix_03.txt  matrix_04.txt  matrix_05.txt
